# geoapps-starter-2425-v2-GKawcki

./: .pre-commit-config.yaml  404.html  Dockerfile  Makefile  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  index.html  main_zajecia03.py  main_zajecia07.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
cw3/: zad_funkcje.py  zad_funkcjeAnonim.py  zad_petle.py  zad_przypisania.py
docs/zaj03/: abstrakcyjne.md  dziedziczenie.md  introspekcja.md  klasy.md  metody.md  obiektowe_poco.md  przeciazanie.md  przyklad.md  pseudoprywatne.md  sloty.md  wbudowane.md  zadania.md
docs/zaj04/: dokumentacja.md  nazewnictwo.md  pakiety.md  zasiegi.md
docs/zaj05/: dekoratory.md  menadzery_kontekstu.md  wyjatki.md
docs/zaj06/: mamba_condalock.md  srodowiska_wirtualne.md
docs/zaj07/: cli.md  formatowanie.md  logowanie.md  make.md  precommit.md  testy.md
geoapps/cwiczenia05/: dekoratory.py  wyjatki.py
geoapps/zajecia03/: __init__.py
search/: search_index.json
zaj0/srod-lok/: index.html
zaj01/git/: index.html
zaj01/instrukcje_petle/: index.html
zaj01/moduly_przestrzenie/: index.html
zaj01/niespodziewane/: index.html
zaj01/praca_z_plikami/: index.html
zaj01/typy_wbudowane/: index.html
zaj01/zadania_sprawdzajace/: index.html
zaj02/funkcje/: index.html
zaj02/generatory/: index.html
zaj02/iteratory/: index.html
zaj02/lambda/: index.html
zaj02/listy_skladane/: index.html
zaj02/petle/: index.html
zaj02/przypisania/: index.html
zaj03/abstrakcyjne/: index.html
zaj03/dziedziczenie/: index.html
zaj03/introspekcja/: index.html
(+34 files in other folders)
