[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoapps"
version = "0.1.0"
requires-python = ">=3.10.0"
description = "Pakiet z kodem z zajęć"
authors = [
    { name = name = "Grzegorz Kawecki", email = "gkawecki@student.agh.edu.pl" }
]

[project.scripts]
geoapps-cli = "geoapps.zajecia07.cli.entrypoint:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs", "tests"]

[tool.ruff]
exclude = [
    "docs",
    "notebooks",
    "data"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
